# SuperSeeker

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt  Cluster.cpp  Cluster.h  ForestBuilder.cpp  ForestBuilder.h  Node.h  Noncopyable.hpp  Params.cpp  Params.h  Sample.cpp  Sample.h  SampleFileProcessor.cpp  SampleFileProcessor.h  SamplesProcessor.cpp  SamplesProcessor.h  Tree.cpp  Tree.h  TreeBuilder.cpp  TreeBuilder.h  _SamplesProcessor.cpp  _SamplesProcessor.h
core_new/: CMakeLists.txt  Node.h  Population.cpp  Population.h  PopulationFileProcessor.cpp  PopulationFileProcessor.h  Sample.cpp  Sample.h  SamplesProcessor.cpp  SamplesProcessor.h  Tree.h  TreeBuilder.cpp  TreeBuilder.h
tests/ovca_snp/: TCGA-13-0913  TCGA-13-1817
tests/washu/: UPN400220  UPN426980  UPN452198  UPN573988  UPN758168  UPN804168  UPN869586  UPN933124
tools/: CMakeLists.txt  superseeker.cpp  treefinder.cpp
